--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   persistent_bottom_nav_bar: ^6.2.1
   flutter_carousel_widget: ^3.1.0
   jwt_decoder: ^2.0.1
+  shared_preferences: ^2.5.3
 
 
 
