--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   flutter_carousel_widget: ^3.1.0
   jwt_decoder: ^2.0.1
   shared_preferences: ^2.5.3
+  image_picker: ^1.1.2
+  
 
 
 
