--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  syncfusion_flutter_charts: ^28.2.5+1
+  syncfusion_flutter_charts: ^29.1.38
   gauge_indicator: ^0.4.3
-  flutter_offline: ^4.0.0
+  flutter_offline: ^5.0.0
   flutter_bloc: ^9.0.0
   dio: ^5.8.0+1
   flutter_native_splash: ^2.4.4
@@ -48,6 +48,7 @@ dependencies:
   jwt_decoder: ^2.0.1
   shared_preferences: ^2.5.3
   image_picker: ^1.1.2
+  dartz: ^0.10.1
   
 
 
@@ -102,6 +103,13 @@ flutter:
     - assets/images/carousel3.jpeg
     - assets/images/carousel4.jpeg
     - assets/images/carousel5.jpeg
+    - assets/images/automatic_control.jpg
+    - assets/images/automatic_control.png
+    - assets/images/automatic_control.jpeg
+    - assets/images/empty.png
+    - assets/images/automatic-control.png
+
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
